--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				</div>
 				<div class="keys">
 				     <p>
-					        <input type="button" value="mrc" class="button function" onClick="">
-							<input type="button" value="m-"   class="button function" onClick="">
-							<input type="button" value="m+"  class="button function" onClick="">
+					        <input type="button" value="mrc" class="button function" onClick="alert('Not yet implemented')">
+							<input type="button" value="m-"   class="button function" onClick="alert('Not yet implemented')">
+							<input type="button" value="m+"  class="button function" onClick="alert('Not yet implemented')">
 							<input type="button" value="/"  class="button operator " onClick="v('/')">
 					 </p>
 					 <p>
