--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="keys">
 				     <p>
 					        <input type="button" value="mrc" class="button function" onClick="alert('Not yet implemented')">
-							<input type="button" value="m-"   class="button function" onClick="alert('Not yet implemented')">
+							<input type="button" value="C"  class="button function" onClick="d('')">
 							<input type="button" value="m+"  class="button function" onClick="alert('Not yet implemented')">
 							<input type="button" value="/"  class="button operator " onClick="v('/')">
 					 </p>
@@ -43,7 +43,7 @@
 					 <p>
 					        <input type="button" value="0" class="button number" onClick="v('0')">
 							<input type="button" value="." class="button number" onClick="v('.')">
-							<input type="button" value="C"  class="button function" onClick="d('')">
+							<input type="button" value="π"   class="button number" onClick="v('3.14')">
 							<input type="button" value="="  class="button operator" onClick="e()">
 					 </p>
 			</div>
