Changed default state to 0 and color

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <!--Add your HTML here-->
         <div class="box">
 		        <div class="display">
-				       <input type="text" readonly size="18" id="d">
+				       <input type="text" readonly size="18" id="d" placeholder = "0">
 				</div>
 				<div class="keys">
 				     <p>
 					        <input type="button" value="mrc" class="button function" onClick="alert('Not yet implemented')">
 							<input type="button" value="C"  class="button function" onClick="d('')">
 							<input type="button" value="m+"  class="button function" onClick="alert('Not yet implemented')">
-							<input type="button" value="/"  class="button operator " onClick="v('/')">
+							<input type="button" value="÷"  class="button operator " onClick="v('/')">
 					 </p>
 					 <p>
 					        <input type="button" value="7" class="button number" onClick="v('7')">
