--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				</div>
 				<div class="keys">
 				     <p>
-					        <input type="button" value="mrc" class="button function" onClick="alert('Not yet implemented')">
+					        <input type="button" value="e" class="button function" onClick="v('2.7')">
 							<input type="button" value="C"  class="button function" onClick="d('')">
-							<input type="button" value="m+"  class="button function" onClick="alert('Not yet implemented')">
+							<input type="button" value="%"  class="button function" onClick="v('/100')">
 							<input type="button" value="÷"  class="button operator " onClick="v('/')">
 					 </p>
 					 <p>
